# cmake-study

./: CMakeLists.txt  README.md
myfunc/: CMakeLists.txt  myfunc.cpp  myfunc.h
src/: main.cpp
